@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.2
 
+	- Fl::arg() now ignores the MacOS X -psn_N_NNNNN option.
 	- Added another change to the WIN32 redraw handling for
 	  the MingW compilers.
 	- Fl_File_Chooser didn't handle WIN32 home directories
